{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 29,
  "lineage": "36e1b4f9-671f-9bde-135e-a26632cb769a",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_additional_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939178415097:security-group/sg-0470081ade4442f92",
            "description": "sg_for_preprod_eks_cluster_additional_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0470081ade4442f92",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.50.30.8/32"
                ],
                "description": "Allow access to kube",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_for_preprod_eks_cluster_additional_sg",
            "name_prefix": "",
            "owner_id": "939178415097",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_preprod_eks_cluster_additional_sg"
            },
            "tags_all": {
              "Name": "sg_for_preprod_eks_cluster_additional_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fcbad31b564128e"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_eks_cluster_additional_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "htpps_access",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.50.30.8/32"
            ],
            "description": "Allow access to kube",
            "from_port": 443,
            "id": "sgrule-804810020",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0470081ade4442f92",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster_additional_sg"
          ]
        }
      ]
    }
  ]
}